# soccer-multiverse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: routes.py  schemas.py
src/domain/: base.py  entities.py  repositories.py  services.py
src/infrastructure/db/: database.py  models.py
src/infrastructure/external_services/: pokemon_api.py  starwars_api.py
src/infrastructure/repositories/: in_memory.py  orm.py
src/scripts/: sync_characters.py
tests/unit/: test_entity_fields.py  test_repositories.py
tests/unit/domain/: test_entities.py  test_services.py
